
edition = "2023";

//option features.field_presence = IMPLICIT;
// option go_package = "issuelock" ; 
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.routeguide";
//option java_outer_classname = "RouteGuideProto";

service LockManager {
  rpc GetStatus(LockRequest) returns (LockResponse) ;
}


message LockRequest {
  string request = 1 ;
}

message LockResponse {
  string response= 1 ;
}
